--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,13 +5,13 @@ template: splash
 hero:
   tagline: Sharing knowledge, unlocking futures. Join OpenLearn Alliance and let's learn together, without limits.
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/community.png
   actions:
     - text: About us
       link: /guides/about/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Join us
+      link: https://t.me/+2Lp3kQBwffM4OGY1
       icon: external
 ---
