--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: Sharing knowledge, unlocking futures. Join OpenLearn Alliance and let's learn together, without limits.
   image:
-    file: ../../assets/community.png
+    file: ../../assets/img.png
   actions:
     - text: About us
       link: /guides/about/
